--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>Restaurante El Olivo</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Restaurante el Olivo webpage oficial">
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
   <link rel="icon" href="/assets/olivo.jpg">
 </head>
