Changed .gif for mp4 video for the Hero. Image size shinkring

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Restaurante el Olivo webpage oficial">
-  <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
-  <link rel="icon" href="/assets/olivo.jpg">
+  <link rel="icon" href="/assets/olivo.png">
 </head>
 
 <body>
